--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
             <h2 class="section-title">Скриншоты приложения</h2>
             <div class="screens-grid">
                 <div class="screen-card">
-                    <img src="images/main.png" alt="Главный экран MoodTracker" class="screen-img">
+                    <img src="Images/main.png" alt="Главный экран MoodTracker" class="screen-img">
                     <div class="screen-info">
                         <h3>Главный экран</h3>
                         <p>Еженедельный обзор настроения и статистика эмоций</p>
                     </div>
                 </div>
                 <div class="screen-card">
-                    <img src="images/statistics.png" alt="Статистика MoodTracker" class="screen-img">
+                    <img src="Images/statistics.png" alt="Статистика MoodTracker" class="screen-img">
                     <div class="screen-info">
                         <h3>Статистика</h3>
                         <p>Детальная аналитика тенденций настроения</p>
                     </div>
                 </div>
                 <div class="screen-card">
-                    <img src="images/notes.png" alt="Дневник MoodTracker" class="screen-img">
+                    <img src="Images/notes.png" alt="Дневник MoodTracker" class="screen-img">
                     <div class="screen-info">
                         <h3>Дневник</h3>
                         <p>Заметки о вашем эмоциональном состоянии</p>
